--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,5 @@
-title: Just the Docs Template
+title: ART HIST 329 Guideline
 description: A starter template for a Jeykll site using the Just the Docs theme!
 theme: just-the-docs
 
-url: https://just-the-docs.github.io
-
-aux_links:
-  Template Repository: https://github.com/just-the-docs/just-the-docs-template
+url: https://nulib-ds.github.io/NU-ARTHIST329
