--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: ART HIST 329 Guideline
-description: A starter template for a Jeykll site using the Just the Docs theme!
+title: NU ART_HIST 329
+description: This is a step-by-step guide for your Digital Mediterranean Project. 
 theme: just-the-docs
 
 url: https://nulib-ds.github.io/NU-ARTHIST329
